k8s/ingress/ingress2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-httpproxy-www2
spec:
  replicas: 2
  selector:
    matchLabels:
      hostname: www2
  template:
    metadata:
      labels:
        hostname: www2
    spec:
        containers:
        - name: nginx
          image: wangyanglinux/myapp:v2.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-httpproxy-www2
spec:
  type: NodePort
  selector:
    hostname: www2
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30010


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-httpproxy-www1
spec:
  ingressClassName: nginx
  rules:
  - host: www1.xinxianghf.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-httpproxy-www1
            port:
              number: 80
